fix: address Codex security remediation findings (#253)
* fix: harden infra defaults and release scope

* fix: prevent sensitive data in request logs

* fix: harden share access and RBAC tenant isolation

* fix: harden auth config and upload ownership

* fix: require auth for blockchain rpc

* fix: address medium security batch 21-25

* fix: address medium security batch 26-30

* fix: address medium security batch 31-35

* fix: address medium security batch 36-40

* fix: address medium security batch 41-45

* fix: address medium security batch 46-50

* fix: address medium security batch 51-55

* fix: address medium security batch 56-60

* fix: address security batch 61-65

* fix: address security batch 66-70

* fix: address security batch 71-75

* fix: address security batch 76-80

* fix: address security batch 81-83

* fix: address security review regressions

* fix: allow chunked uploads over single chunk limit

* fix: standardize frontend pnpm toolchain

* fix: mask sensitive identifiers in logged paths

* fix: repair ci regression checks

* fix: align ci permission assertions

* fix: sync generated api types

* fix: raise security patch coverage

* fix: lift security patch coverage

* fix: sync roadmap test baseline

---------

Co-authored-by: flyingcoding <wbq1724593655@gmail.com>